# bot-brawl-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_DOCUMENTATION.md  AUDITORIA_COMPLETA_BOT.md  CHANGELOG.md  CIRCULAR_DEPENDENCIES_ANALYSIS.md  CONTRIBUTING.md  DEPENDENCIES_MANIFEST.md  DIAGNOSTICO.md  DISCLAIMER.py  Dockerfile  ERROR_RECOVERY_INTEGRATION.md  EXECUTIVE_SUMMARY.md  FEATURES_DOCUMENTATION.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_TESTING.md  IMPROVEMENTS_ANALYSIS.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION_GUIDE.md  LEARNING_PATH.md  LOBBY_CAPABILITIES_REPORT.md  LOGS_GUIDE.md  MODERNIZATION_PLAN.md  Makefile  PROFESSIONAL_EVOLUTION_PLAN.md  QUICKSTART_AI.md  README.md  READY.txt  RELATORIO_CORRECOES_DATA_COLLECTION.md  RELATORIO_MASTER_FINAL_SOBERANA_OMEGA.md  S03-E2E-CHECKLIST.md  SESSION_SUMMARY.md  STATUS.txt  TESTING_GUIDE.md  UNIMPLEMENTED.md  WINDOWS_COMMANDS.md  (+131 more)
.planning/: DASHBOARD_ENHANCEMENT_PLAN.md  ROADMAP.md  STATE.md
analysis/: __init__.py  performance_analyzer.py  replay_analyzer.py  replay_parser.py
api/: brawl_stars_routes.py
automation/: __init__.py  bot_monitoring.py  code_quality.py  dataset_collector.py  dataset_collector_v2.py  emulator_monitoring.py  gameplay_recorder.py  metadata_extractor.py  model_download.py  rule_engine.py
backend/: __init__.py
brawl_bot/: __init__.py  wrapper.py
control/: __init__.py
core/: __init__.py  adaptive_screenshot.py  adversarial_humanization.py  alert_system.py  anti_ban.py  async_pipeline.py  auto_fix_engine.py  auto_roi_calibrator.py  behavioral_anomaly_detector.py  behavioral_profile.py  central_coordinator.py  class_registry.py  config_manager.py  constants.py  continuous_improvement.py  cover_system.py  dashboard_handler.py  dashboard_logic.py  dashboard_templates.py  degradation_manager.py  distributed_tracing.py  error_recovery.py  esp_overlay.py  event_store.py  experience_buffer.py  factory.py  game_state_checkpoint.py  health_checks.py  input_optimizer.py  learning_metrics.py  learning_mode.py  learning_rl_metrics.py  lobby_fsm.py  log_buffer.py  logging_config.py  metrics.py  mode_controller.py  model_auto_updater.py  model_registry.py  notifications.py  (+24 more)
data/: enriched_collector.py
dataset/: enriched_collector.py
decision/: __init__.py  action_mapper.py  brawler_adaptive_controller.py  brawler_selector.py  combat_decision_bridge.py  enemy_intention.py  gradient_boosting_decisions.py  intent_system.py  map_strategy.py  meta_awareness.py  meta_predictor.py  multi_objective_rl.py  neural_policy.py  rules.py  scorer.py  state_machine.py  sticky_target.py  utility_ai.py  win_rate_predictor.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_REDUCTION_PLAN.md  DATA_COLLECTION.md  DOCUMENTACAO_COMPLETA_PROFISSIONAL.md  ERROR_HANDLING_POLICY.md  MELHORIAS_APLICADAS.md  QUICKSTART.md  TEST_REPORT.md  TROUBLESHOOTING.md
enterprise/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STRATEGY_REPORT.md  README.md  __init__.py  main.py  quickstart.py  requirements.txt  setup.py
models/: model_registry.json  models_metadata.json
neural/: __init__.py  cnn_backbone.py  curriculum_learner.py  distributed_orchestrator.py  fusion_head.py  grid_builder.py  neural_policy.py  online_learning_pipeline.py  rl_bridge.py  state_encoder.py  temporal_memory.py  transfer_learning.py
plugins/: __init__.py  learning_mode_plugin.py  learning_plugin.py  orchestrator_plugin.py  safety_plugin.py  strategy_plugin.py  ui_plugin.py  vision_plugin.py
pylaai_real/: __init__.py  anti_ban_advanced.py  auto_calibrator.py  combat_advanced.py  dashboard_server.py  debug_visualizer.py  detect.py  elo_tracker.py  humanization_utils.py  lobby_automation_expanded.py  lobby_automator.py  lobby_navigator.py  movement.py  ocr_state_detector.py  play.py  progress_observer.py  rl_engine.py  screen_automation.py  screenshot_taker.py  state_finder.py  state_manager.py  state_recovery.py  unified_state_detector.py
pylaai_workspace/: match_history.json
rl_stubs/: __init__.py  behavior_cloning.py  cql_trainer.py  safety_gate.py
scripts/: consolidate_datasets.py  run_data_collection.py  train_rl.py  validate_episodes.py
tests/: __init__.py  conftest.py  test_ability_manager.py  test_adversarial_humanization.py  test_aim_assist_improved.py  test_anti_ban.py  test_api_diagnostics.py  test_api_security.py  test_auto_calibrator_resolution.py  test_auto_tuner.py  test_behavioral_biometrics_integration.py  test_class_registry.py  test_class_schema.py  test_combat_engine.py  test_connect_detect_all_called.py  (+62 more)
(+185 files in other folders)
